tests/baselines/reference/inferTInParentheses.errors.txt
tests/cases/compiler/inferTInParentheses.ts(4,23): error TS2370: A rest parameter must be of an array type.
tests/cases/compiler/inferTInParentheses.ts(5,30): error TS2574: A rest element type must be an array type.
tests/cases/compiler/inferTInParentheses.ts(6,33): error TS2344: Type 'N' does not satisfy the constraint 'number'.


==== tests/cases/compiler/inferTInParentheses.ts (3 errors) ====
    type F1 = (num: [number]) => void;
    type IsNumber<T extends number> = T;
    
    type T1 = F1 extends (...args: (infer T)) => void ? T : never;
                          ~~~~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
    type T2 = F1 extends (args: [...(infer T)]) => void ? T : never;
                                 ~~~~~~~~~~~~
!!! error TS2574: A rest element type must be an array type.
    type T3<T> = T extends IsNumber<(infer N)> ? true : false;
                                    ~~~~~~~~~
!!! error TS2344: Type 'N' does not satisfy the constraint 'number'.
    